tests/fixtures/invalid/float_mul_bytes.py
# Cannot multiply Float by Bytes
x: float = 1.0 * b"hello"
